# packages/core/src/api/generated.ts
@@ -26,6 +26,13 @@ export interface paths {
      */
     get: operations["getCandidatesBySeries"];
   };
+  "/series/{seriesId}/votes": {
+    /**
+     * Get votes for a series
+     * @description Returns a list of all votes cast in a specific series.
+     */
+    get: operations["getVotesBySeries"];
+  };
   "/candidates/{candidateId}": {
     /**
      * Get a specific candidate
@@ -157,6 +164,10 @@ export interface operations {
         limit?: number;
         /** @description The number of candidates to skip before starting to collect the result set. */
         offset?: number;
+        /** @description The field to sort by. */
+        sortBy?: "name";
+        /** @description The order to sort by. */
+        sortOrder?: "asc" | "desc";
       };
       path: {
         seriesId: number;
@@ -167,6 +178,35 @@ export interface operations {
       200: {
         content: {
           "application/json": components["schemas"]["Candidate"][];
+        };
+      };
+      /** @description Series not found. */
+      404: {
+        content: never;
+      };
+    };
+  };
+  /**
+   * Get votes for a series
+   * @description Returns a list of all votes cast in a specific series.
+   */
+  getVotesBySeries: {
+    parameters: {
+      query?: {
+        /** @description The maximum number of votes to return. */
+        limit?: number;
+        /** @description The number of votes to skip before starting to collect the result set. */
+        offset?: number;
+      };
+      path: {
+        seriesId: number;
+      };
+    };
+    responses: {
+      /** @description A successful response with an array of votes. */
+      200: {
+        content: {
+          "application/json": components["schemas"]["Vote"][];
         };
       };
       /** @description Series not found. */
